Bug 139254 - The operators (square root, fraction, etc) do not have keyboard shortcuts
Summary: The operators (square root, fraction, etc) do not have keyboard shortcuts
Status: RESOLVED FIXED
Alias: None
Product: calligraformula
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.x
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Alfredo Beaumont
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-26 22:09 UTC by Luciano Montanaro
Modified: 2011-03-11 11:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luciano Montanaro 2006-12-26 22:09:50 UTC
Version:           1.6 (using KDE KDE 3.5.5)
Installed from:    Unspecified
OS:                Linux

The operators in the toolbar do not have a keyboard shortcut. This makes inserting them repeatedly, like in pages of exercises, a bit cumbersome.

And there should be a way to insert them through the keyboard anyway, for accessibility reasons.
Comment 1 Alfredo Beaumont 2007-01-02 16:55:29 UTC
SVN commit 619027 by abeaumont:

Add shortcuts for more toolbar actions

BUG: 139254


 M  +37 -0     kformuladocument.cc  


--- branches/koffice/1.6/koffice/lib/kformula/kformuladocument.cc #619026:619027
@@ -1228,6 +1228,31 @@
             setShortcut( KShortcut( CTRL + Key_G ) );
         getInsertSymbolAction()->
             setShortcut( KShortcut( CTRL + Key_I ) );
+        getAddOverlineAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_O ) );
+        getAddUnderlineAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_U ) );
+        getAddBracketAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_B ) );
+        getAddSBracketAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_D ) );
+        getAddCBracketAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_C ) );
+        getAddAbsAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_A ) );
+        getAddFractionAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_F ) );
+        getAddRootAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_R ) );
+        getAddSumAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_S ) );
+        getAddProductAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_P ) );
+        getAddIntegralAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_I ) );
+        getAddMatrixAction()->
+            setShortcut( KShortcut( CTRL + SHIFT + Key_M ) );
+
     }
     else {
         getAddGenericUpperAction()->setShortcut( KShortcut() );
@@ -1235,6 +1260,18 @@
         getRemoveEnclosingAction()->setShortcut( KShortcut() );
         getMakeGreekAction()->setShortcut( KShortcut() );
         getInsertSymbolAction()->setShortcut( KShortcut() );
+        getAddOverlineAction()->setShortcut( KShortcut() );
+        getAddUnderlineAction()->setShortcut( KShortcut() );
+        getAddBracketAction()->setShortcut( KShortcut() );
+        getAddSBracketAction()->setShortcut( KShortcut() );
+        getAddCBracketAction()->setShortcut( KShortcut() );
+        getAddAbsAction()->setShortcut( KShortcut() );
+        getAddFractionAction()->setShortcut( KShortcut() );
+        getAddRootAction()->setShortcut( KShortcut() );
+        getAddSumAction()->setShortcut( KShortcut() );
+        getAddProductAction()->setShortcut( KShortcut() );
+        getAddIntegralAction()->setShortcut( KShortcut() );
+        getAddMatrixAction()->setShortcut( KShortcut() );
     }
 }