Add shortcuts for more toolbar actions

BUG: 139254

svn path=/branches/koffice/1.6/koffice/; revision=619027